styles/ArtCard.module.css
.card {
  position: relative;
  width: 100%; 
  max-width: 220px; 
  height: auto;
  aspect-ratio: 325 / 350; 
  overflow: hidden;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  background-color: #fff;
  transition: transform 0.3s ease, box-shadow 0.3s ease, border-radius 0.3s ease;
  margin: 1rem auto;
  border-radius: 8px; 
}

.card:hover {
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
}

.imagecontainer {
  position: relative;
  width: 100%;
  height: 100%;
}

.image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.hovercontent {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 30%; 
  background: rgba(0, 0, 0, 0.75);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start; 
  padding: 10px;
  color: white;
  opacity: 0;
  transform: translateY(100%);
  transition: opacity 0.5s ease, transform 0.5s ease;
  overflow: hidden;
}

.card:hover .hovercontent {
  opacity: 1;
  transform: translateY(0);
}

.title {
  font-size: 100%; 
  font-weight: bold;
  margin: 0;
  line-height: 1.2; 
  overflow: hidden; 
  white-space: normal;
}

.description {
  font-size: 60%; 
  overflow: hidden; 
  line-height: 1.4;
  white-space: normal;
}

@media screen and (max-width: 1024px) {
  .card {
    max-width: 180px; 
  }

  .title {
    font-size: 100%; 
  }

  .description {
    font-size: 55%;
  }
}

@media screen and (max-width: 768px) {
  .card {
    max-width: 160px; 
  }

  .title {
    font-size: 70%; 
  }

  .description {
    font-size: 40%; 
  }
}

@media screen and (max-width: 480px) {
  .card {
    max-width: 140px;
  }

  .title {
    font-size: 10vw; 
  }

  .description {
    font-size: 5vw;
  }
}

@media screen and (max-width: 360px) {
  .card {
    max-width: 120px; 
  }

  .title {
    font-size: 13vw; 
  }

  .description {
    font-size: 9vw; 
  }
}

